--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="/game/umi.09b66b29.js"></script>
+<script src="/umi.09b66b29.js"></script>
 
 </body></html>
